fix join group